--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backups-bot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "spank-me.js",
   "author": "Spanker",
   "license": "MIT",
   "dependencies": {
