--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "token": "",
-    "prefix": "s!",
+    "prefix": "arkadaşlar prefixleri değiştirmek istiyorsanız mainden değiştirin haberiniz ola",
     "okemoji": "<a:okgif:899409514233741352>",
     "redemoji": "<a:redgif:899409528918016010>"
 }
